--- a/hdi/hdi_wms/views/hdi_picking_list_views.xml
+++ b/hdi/hdi_wms/views/hdi_picking_list_views.xml
@@ -11,6 +11,7 @@
                   decoration-success="state in ('completed', 'scanned')">
                 <field name="name"/>
                 <field name="picking_id"/>
+                <field name="outgoing_type" widget="badge" optional="show"/>
                 <field name="assigned_user_id"/>
                 <field name="total_planned_qty" sum="Total"/>
                 <field name="total_picked_qty" sum="Total"/>
@@ -81,6 +82,13 @@
                         <group>
                             <field name="picking_id" readonly="state != 'draft'"/>
                             <field name="picking_type" invisible="1"/>
+                            <field name="outgoing_type" widget="badge" 
+                                   decoration-success="outgoing_type == 'sale'"
+                                   decoration-info="outgoing_type == 'transfer'"
+                                   decoration-warning="outgoing_type == 'production'"/>
+                            <field name="destination_warehouse_id" 
+                                   invisible="outgoing_type != 'transfer'"
+                                   readonly="state != 'draft'"/>
                             <field name="created_by_id" readonly="1"/>
                             <field name="assigned_user_id"/>
                         </group>
@@ -205,6 +213,7 @@
             <kanban default_group_by="state">
                 <field name="name"/>
                 <field name="picking_id"/>
+                <field name="outgoing_type"/>
                 <field name="assigned_user_id"/>
                 <field name="total_planned_qty"/>
                 <field name="total_picked_qty"/>
@@ -219,6 +228,9 @@
                                 </strong>
                                 <div>
                                     <i class="fa fa-file-text-o"/> <field name="picking_id"/>
+                                </div>
+                                <div>
+                                    <i class="fa fa-tag"/> <field name="outgoing_type"/>
                                 </div>
                                 <div>
                                     <i class="fa fa-user"/> <field name="assigned_user_id"/>
