--- a/hdi/hdi_wms/wizard/picking_suggestion_wizard_views.xml
+++ b/hdi/hdi_wms/wizard/picking_suggestion_wizard_views.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!-- Picking Suggestion Wizard Tree (required for Odoo) -->
+    <record id="view_picking_suggestion_wizard_tree" model="ir.ui.view">
+        <field name="name">hdi.picking.suggestion.wizard.tree</field>
+        <field name="model">hdi.picking.suggestion.wizard</field>
+        <field name="arch" type="xml">
+            <tree create="false" edit="false" delete="false">
+                <field name="picking_id"/>
+                <field name="total_qty_needed"/>
+                <field name="total_qty_suggested"/>
+            </tree>
+        </field>
+    </record>
+
     <!-- Picking Suggestion Wizard Form -->
     <record id="view_picking_suggestion_wizard_form" model="ir.ui.view">
         <field name="name">hdi.picking.suggestion.wizard.form</field>
