--- a/hdi/hdi_wms/views/hdi_inventory_check_views.xml
+++ b/hdi/hdi_wms/views/hdi_inventory_check_views.xml
@@ -21,26 +21,14 @@
                                 invisible="state in ('done', 'cancel')"/>
                         <field name="state" widget="statusbar"
                             statusbar_visible="draft,in_progress,review,done"/>
-                    </header>
-                    
-                    <sheet>
-                        <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="object"
-                                    name="action_view_adjustments" icon="fa-exchange"
-                                    invisible="state != 'done'">
-                                <div class="o_field_widget o_stat_info">
-                                    <span class="o_stat_text">Điều chỉnh</span>
-                                </div>
-                            </button>
-                        </div>
-                        
-                        <div class="oe_title">
-                            <h1>
-                                <field name="name" readonly="1"/>
-                            </h1>
-                        </div>
-                        
-                        <group>
+                </header>
+                
+                <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" readonly="1"/>
+                        </h1>
+                    </div>                        <group>
                             <group>
                                 <field name="check_type" widget="radio"
                                     readonly="state != 'draft'"/>
