--- a/hdi/hdi_wms/views/stock_quant_views.xml
+++ b/hdi/hdi_wms/views/stock_quant_views.xml
@@ -18,33 +18,30 @@
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.view_stock_quant_tree_inventory_editable"/>
         <field name="arch" type="xml">
-            <!-- Add check_type selector at top before header -->
-            <xpath expr="//list/header" position="before">
-                <group name="check_type_group">
-                    <field name="check_type" widget="radio" options="{'horizontal': true}"/>
-                </group>
-            </xpath>
+            <!-- Add check_type hidden field for conditional logic -->
+            <field name="location_id" position="after">
+                <field name="check_type" column_invisible="True"/>
+            </field>
             
             <!-- KK_NV_01: Show batch_id for batch check -->
             <field name="product_id" position="after">
                 <field name="batch_id" 
-                       column_invisible="check_type != 'batch'" 
-                       required="check_type == 'batch'"
                        domain="[('location_id', '=', location_id)]"
-                       optional="show"/>
+                       optional="hide"
+                       groups="hdi_wms.group_wms_user"/>
             </field>
             
             <!-- KK_NV_02: Show barcode scanning fields before inventory_quantity -->
             <field name="inventory_quantity" position="before">
                 <field name="scan_mode" widget="boolean_toggle" 
-                       column_invisible="check_type != 'barcode'"
-                       string="Quét" optional="show"/>
+                       string="Quét" optional="hide"
+                       groups="hdi_wms.group_wms_user"/>
                 <field name="last_scanned_code" 
-                       column_invisible="check_type != 'barcode'"
-                       readonly="1" optional="show"/>
+                       readonly="1" optional="hide"
+                       groups="hdi_wms.group_wms_user"/>
                 <field name="scanned_count" 
-                       column_invisible="check_type != 'barcode'"
-                       readonly="1" optional="show"/>
+                       readonly="1" optional="hide"
+                       groups="hdi_wms.group_wms_user"/>
             </field>
         </field>
     </record>
